# daily-receipe-whatsapp-bot

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCKER.md  Dockerfile  PROJETO.md  README.md  SETUP.md  config.py  daily-receipe-whatsapp-bot-2026-03-06-124350.mmd  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  db-migration.yml
migrations/: env.py
migrations/versions/: 001_initial.py  002_make_message_log_recipe_id_nullable.py
src/application/dtos/: message_dto.py  protein_dto.py  recipe_dto.py
src/application/use_cases/: create_protein_use_case.py  list_recipes_use_case.py  send_recipe_use_case.py
src/application/use_cases/message/: send_recipe_use_case.py
src/application/use_cases/protein/: create_protein_use_case.py  delete_protein_use_case.py  get_protein_use_case.py  list_proteins_use_case.py  update_protein_use_case.py
src/application/use_cases/recipe/: create_recipe_use_case.py  delete_recipe_use_case.py  generate_recipe_use_case.py  get_recipe_use_case.py  list_recipes_use_case.py  scrape_recipe_use_case.py  update_recipe_use_case.py
src/domain/entities/: message_log.py  phone_number.py  protein.py  recipe.py
src/domain/repositories/: message_log_repository.py  phone_number_repository.py  protein_repository.py  recipe_repository.py
src/domain/services/: recipe_service.py  whatsapp_service.py
src/infrastructure/ai/: gemini_recipe_generator.py  openai_recipe_generator.py  unsplash_image_fetcher_mixin.py
src/infrastructure/database/: connection.py  seed.py
src/infrastructure/logging/: logger.py
src/infrastructure/messaging/: twilio_whatsapp_service.py
src/infrastructure/scraping/: tudo_gostoso_scraper.py
src/presentation/: main.py
tests/: conftest.py
tests/unit/: test_entities.py
(+18 files in other folders)
