[project]
name = "daily-recipe-whatsapp-bot"
version = "0.1.0"
description = "API backend que envia receitas culinárias diárias via WhatsApp"
authors = [{name = "Caue Prado", email = "caue.prado0@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "twilio>=9.0.0",
    "openai>=1.40.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
